Font Awesome icons added, Navbar started

--- a/index.html
+++ b/index.html
@@ -6,12 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogger</title>
 
+
+    <!-- ======  Font Awemose ========  -->
+    <link rel="stylesheet" href="./css/fontawesome.all.min.css">
+
     <!-- Custom Style file -->
     <link rel="stylesheet" href="./css/style.css">
+
 </head>
 
 <body>
 
+    <!-- ========================Start Navigation ===========================-->
+
+    <nav class="nav">
+        <div class="nav-menu flex-row">
+            <div class="nav-brand">
+                <a href="#" class="text-gray">Blogger</a>
+            </div>
+            <div>
+                <ul class="nav-items">
+                    <li class="nav-link">
+                        <a href="#">Home</a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="#">Category</a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="#">Archive</a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="#">Pages</a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="social text-gray">
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="#"><i class="fab fa-dribbble"></i></a>
+            </div>
+        </div>
+    </nav>
+
+    <!-- ========================End Navigation ===========================-->
 
 
     <!-- Custom Javascript file -->
