--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
             <div class="nav-brand">
                 <a href="#" class="text-gray">Blogger</a>
             </div>
+            <div class="toggle-collapse">
+                <div class="toggle-icons">
+                    <i class="fas fa-bars"></i>
+                </div>
+            </div>
             <div>
                 <ul class="nav-items">
                     <li class="nav-link">
@@ -55,6 +60,8 @@
 
     <!-- ========================End Navigation ===========================-->
 
+    <!-- jQuery library -->
+    <script src="./js/jQuery3.5.0.min.js"></script>
 
     <!-- Custom Javascript file -->
     <script src="./js/main.js"></script>
