Site title completed

--- a/index.html
+++ b/index.html
@@ -60,6 +60,28 @@
 
     <!-- ========================End Navigation ===========================-->
 
+    <!-- =============================== Main Site Section =============================== -->
+
+    <main>
+        <!-- ========== Site title  ========== -->
+
+        <section class="site-title">
+            <div class="site-background">
+                <h3>Tours & Travels</h3>
+                <h1>Amazing Place On Earth</h1>
+                <button class="btn">Explore</button>
+            </div>
+        </section>
+
+        <!-- ========== End Site title  ========== -->
+
+
+    </main>
+
+    <!-- =============================== End Main Site Section =============================== -->
+
+    <!-- ========================End Navigation ===========================-->
+
     <!-- jQuery library -->
     <script src="./js/jQuery3.5.0.min.js"></script>
 
