Collapse button animated when click, Custom Scrollbar

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             </div>
             <div class="toggle-collapse">
                 <div class="toggle-icons">
-                    <i class="fas fa-bars"></i>
+                    <i id="open" class="fas fa-bars"></i>
+                    <i id="close" class="fas fa-times" style="opacity: 0;"></i>
                 </div>
             </div>
             <div>
