--- a/index.html
+++ b/index.html
@@ -235,8 +235,26 @@
                         <ul class="category-list">
                             <li class="list-items">
                                 <a href="#">Software</a>
+                                <span>(05)</span>
+                            </li>
+                            <li class="list-items">
+                                <a href="#">Technology</a>
+                                <span>(03)</span>
+                            </li>
+                            <li class="list-items">
+                                <a href="#">Lifestyle</a>
+                                <span>(01)</span>
+                            </li>
+                            <li class="list-items">
+                                <a href="#">Food</a>
+                                <span>(02)</span>
+                            </li>
+                            <li class="list-items">
+                                <a href="#">Shopping</a>
+                                <span>(04)</span>
                             </li>
                         </ul>
+
                     </div>
                 </aside>
 
