one item added to sidebar category

--- a/index.html
+++ b/index.html
@@ -253,6 +253,10 @@
                                 <a href="#">Shopping</a>
                                 <span>(04)</span>
                             </li>
+                            <li class="list-items">
+                                <a href="#">Gaming</a>
+                                <span>(69)</span>
+                            </li>
                         </ul>
 
                     </div>
