--- a/index.html
+++ b/index.html
@@ -338,7 +338,15 @@
                             <hr>
                         </div>
                     </div>
-
+                    <div class="newsletter">
+                        <h2>Newsletter</h2>
+                        <div class="form-element">
+                            <input type="text" class="input-element" placeholder="Email">
+                            <button class="btn form-btn">
+                                Subscribe
+                            </button>
+                        </div>
+                    </div>
                 </aside>
 
         </section>
