Popular tags added

--- a/index.html
+++ b/index.html
@@ -347,6 +347,18 @@
                             </button>
                         </div>
                     </div>
+                    <div class="popular-tags">
+                        <h2>Popular tags</h2>
+                        <div class="tags">
+                            <span class="tag">Software</span>
+                            <span class="tag">Technology</span>
+                            <span class="tag">Design</span>
+                            <span class="tag">Travel</span>
+                            <span class="tag">Illustrations</span>
+                            <span class="tag">Lifestyle</span>
+                            <span class="tag">Love</span>
+                        </div>
+                    </div>
                 </aside>
 
         </section>
