--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                     </div>
                     <div class="popular-tags">
                         <h2>Popular tags</h2>
-                        <div class="tags">
+                        <div class="tags flex-row">
                             <span class="tag">Software</span>
                             <span class="tag">Technology</span>
                             <span class="tag">Design</span>
@@ -360,7 +360,6 @@
                         </div>
                     </div>
                 </aside>
-
         </section>
 
     </main>
@@ -368,6 +367,26 @@
     <!-- =============================== End Main Site Section =============================== -->
 
     <!-- ========================End Navigation ===========================-->
+
+    <!-- ========================= Start Footer =================== -->
+    <footer class="footer">
+        <div class="container">
+            <div class="about-us">
+                <h2>About us</h2>
+            </div>
+            <div class="newsletter">
+                <h2>Newsletter</h2>
+            </div>
+            <div class="instagram">
+                <h2>Instagram</h2>
+            </div>
+            <div class="follow">
+                <h2>Follow me</h2>
+            </div>
+        </div>
+    </footer>
+
+    <!-- ========================= End Footer =================== -->
 
     <!-- jQuery library -->
     <script src="./js/jQuery3.5.0.min.js"></script>
