About us section completed

--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@
         <div class="container">
             <div class="about-us">
                 <h2>About us</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In voluptate culpa consequuntur eveniet quo earum.</p>
             </div>
             <div class="newsletter">
                 <h2>Newsletter</h2>
