--- a/index.html
+++ b/index.html
@@ -397,6 +397,14 @@
             </div>
             <div class="follow">
                 <h2>Follow me</h2>
+                <p>Let us be social</p>
+                <div>
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-dribbble"></i>
+                    <i class="fab fa-youtube"></i>
+                </div>
             </div>
         </div>
     </footer>
