--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="nav">
         <div class="nav-menu flex-row">
             <div class="nav-brand">
-                <a href="#" class="text-gray">Blogger</a>
+                <a href="#" class="brand-text">Blogger</a>
             </div>
             <div class="toggle-collapse">
                 <div class="toggle-icons">
@@ -406,6 +406,14 @@
                     <i class="fab fa-youtube"></i>
                 </div>
             </div>
+        </div>
+        <div class="rights flex-row">
+            <h4 class="text-gray">
+                Copyright 2020 All rights reserved
+            </h4>
+        </div>
+        <div class="move-up">
+            <span><i class="fas fa-arrow-circle-up fa-2x"></i></span>
         </div>
     </footer>
 
